--- a/Descargas.html
+++ b/Descargas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./img/logoDesu1.ico">
     <title>Descargas</title>
 </head>
 <body>
@@ -28,6 +29,7 @@
         <ul>
             <li><a href="./Registrar.html">Registrate</a></li>
             <li><a href="./IniciarSesion.html">Iniciar sesion</a></li>
+            <li><a href="./Tienda.html">Tienda Desu</a></li>
             <li><a href="#nosotros">Quienes somos</a></li>
             <li><a href="./Descargas.html">Descargas</a></li>
         </ul>
