--- a/index.html
+++ b/index.html
@@ -125,22 +125,22 @@
                   <div class="carousel-item active">
                     <img src="./img/Miniatura clickbait curiosidad YouTube.png" class="d-block w-100 h-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>First slide label</h5>
-                      <p>Some representative placeholder content for the first slide.</p>
+                      <h5>Plan Streemer</h5>
+                      <p>Puedes comprarlo en el apartado de la tienda Desu.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img src="./img/2.png" class="d-block w-100 h-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Second slide label</h5>
-                      <p>Some representative placeholder content for the second slide.</p>
+                      <h5>Plan Fan</h5>
+                      <p>Puedes comprarlo en el apartado de la tienda Desu.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img src="./img/1.png" class="d-block w-100 h-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Third slide label</h5>
-                      <p>Some representative placeholder content for the third slide.</p>
+                      <h5>Plan Lector</h5>
+                      <p>Puedes comprarlo en el apartado de la tienda Desu.</p>
                     </div>
                   </div>
                 </div>
@@ -316,7 +316,8 @@
     </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
