--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-    <meta name="viewport" content="width=device-width, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <!-- <meta name="viewport" content="width=device-width, maximum-scale=1">-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./img/logoDesu1.ico">
@@ -170,26 +170,34 @@
                     <div class="streem">
                         <button class="seguir" type="button">seguir</button>
                         <img src="./img/streemer.PNG" alt="imagen de streemer1">
-                        <p>descripcion del streemer donde se pondra un breve resumen de quien es y su ranking de 
-                            popularidad </p>
-                        <p>600k | seguidores</p>
-                        <p>Temas | reacciones | juegos | creativo </p>
+                        <div class="div_p">
+                            <p>descripcion del streemer donde se pondra un breve resumen de quien es y su ranking de 
+                                popularidad </p>
+                            <p>600k | seguidores</p>
+                            <p>Temas | reacciones | juegos | creativo </p>
+                        </div>
                     </div>
         
                     <div class="streem">
                         <button class="seguir" type="button">seguir</button>
                         <img src="./img/streemer.PNG" alt="imagen de streemer2">
-                        <p>descripcion del streemer donde se pondra un breve resumen de quien es y su ranking de popularidad</p>
-                        <p>600k | seguidores</p>
-                        <p>Temas | reacciones | juegos | creativo </p>
+                        <div class="div_p">
+                            <p>descripcion del streemer donde se pondra un breve resumen de quien es y su ranking de 
+                                popularidad </p>
+                            <p>600k | seguidores</p>
+                            <p>Temas | reacciones | juegos | creativo </p>
+                        </div>
                     </div>
         
                     <div class="streem">
                         <button class="seguir" type="button">seguir</button>
                         <img src="./img/streemer.PNG" alt="imagen de streemer3">
-                        <p>descripcion del streemer donde se pondra un breve resumen de quien es y su ranking de popularidad</p>
-                        <p>600k | seguidores</p>
-                        <p>Temas | reacciones | juegos | creativo </p>  
+                        <div class="div_p">
+                            <p>descripcion del streemer donde se pondra un breve resumen de quien es y su ranking de 
+                                popularidad </p>
+                            <p>600k | seguidores</p>
+                            <p>Temas | reacciones | juegos | creativo </p>
+                        </div>  
                     </div>
                 </div>
             </div>
