--- a/index.html
+++ b/index.html
@@ -308,14 +308,14 @@
             <p>Contatos directos</p>
             <ol>
                 <li>Telefono: 2214439075</li>
-                <li>correo: somos_social_desu@socialDesu.com.mx</li>
+                <li>correo: somosSocialDesu@socialDesu.com.mx</li>
                 <li>Nos encontramos en: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, cumque! </li>
                 <li>Apoyanos en paypal: Lorem ipsum dolor sit amet.</li>
             </ol>
         </div>
 
         <div class="ubicacion">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3771.4522313287134!2d-98.20042038509494!3d19.043844357931267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cfc0e79802f289%3A0x7a4c1293b30a34d6!2sZ%C3%B3calo%20de%20Puebla!5e0!3m2!1ses-419!2smx!4v1668833177864!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3771.4522313287134!2d-98.20042038509494!3d19.043844357931267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cfc0e79802f289%3A0x7a4c1293b30a34d6!2sZ%C3%B3calo%20de%20Puebla!5e0!3m2!1ses-419!2smx!4v1668833177864!5m2!1ses-419!2smx" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
     <div class="copy">
