--- a/Tienda.html
+++ b/Tienda.html
@@ -89,7 +89,40 @@
             <div class="tienda_contenido">
 
                 <aside>
-                
+                <div class="categorias">
+                    <h3>Categorias</h3>
+                    <ul>
+                        <li>articulo 1</li>
+                        <li>articulo 2</li>
+                        <li>articulo 3</li>
+                        <li>articulo 4</li>
+                        <li>articulo 5</li>
+                        <li>articulo 6</li>
+                        <li>articulo 7</li>
+                        <li>articulo 8</li>
+                    </ul>
+                </div>
+
+                <div class="filtros">
+                    <h3>Filtros</h3>
+                    <div class="form_filtro">
+                        
+                    </div>
+                </div>
+
+                <div class="masBuscados">
+                    <h3>Mas buscados</h3>
+                    <ol>
+                        <li>mas buscado 1</li>
+                        <li>mas buscado 2</li>
+                        <li>mas buscado 3</li>
+                        <li>mas buscado 4</li>
+                        <li>mas buscado 5</li>
+                        <li>mas buscado 6</li>
+                        <li>mas buscado 7</li>
+                        <li>mas buscado 8</li>
+                    </ol>
+                </div>
                 </aside>
 
 
