--- a/index.html
+++ b/index.html
@@ -298,8 +298,9 @@
     <div class="pie_datos">
         <div class="pie_datos_lista">
             <ul>
+                <li>Mas sobre nosotros</li>
                 <li><a href="#">Terminos y condiciones</a></li>
-                <li><a href="#">Sobre los productos que ofrecemos</a></li>
+                <li><a href="#">productos</a></li>
                 <li><a href="#">Trato directo</a></li>
                 <li><a href="#">Visita a la empresa</a></li>
             </ul>
