--- a/IniciarSesion.html
+++ b/IniciarSesion.html
@@ -76,7 +76,7 @@
     <main id="main_Sesion">
         <div class="divForm">
             <div class="precentacion">
-                <h1>Inicia tu sesion</h1>
+                <h1>Inicia Sesion</h1>
                 <span>Inicia Sesion con tu cuenta Social Desu</span>
             </div>
 
