--- a/Tienda.html
+++ b/Tienda.html
@@ -135,7 +135,7 @@
                 </li>
                 <li id="btn">
                   <a class="btn btn-primary" id="btn_carrito" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+                    <svg id="bi-cart4" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
                       <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
                     </svg>
                     Carrito
@@ -514,18 +514,11 @@
         <!--fin del segundo-->
 
         <div class="buscador">
-          <!-- <div class="carrito">
-                    <p>Carrito</p>
-                    <img src="./img/carrito.jpg" alt="carritoCompra">
-                </div>-->
           <form action="#" class="buscador_form">
-            <input
-              type="search"
-              name="buscaProd"
-              placeholder="camiceta, figura, manga, mercaDesu"
-            />
-            <input type="submit" value="Buscar" />
+            <input id="buscar" type="search" name="buscaProd" placeholder="camiceta, figura, manga, mercaDesu"/>
+            <!--<input id="enviar_busqueda" type="submit" value="Buscar" />-->
           </form>
+          <button id="enviar_busqueda">Buscar</button>
         </div>
 
         <div class="tienda_contenido">
