--- a/index.html
+++ b/index.html
@@ -110,21 +110,21 @@
                         Desu
                     </span>
                     <p>plan para generadores de contenido en la plataforma, con beneficios unicos para ellos</p>
-                        <a href="#">Mas informacion...</a>
+                        <button id="memb1">Comprar Membresi</button>
                 </div>
                 <div>
                     <span>Plan Fan
                         Desu
                     </span>
                     <p>plan para generadores de contenido en la plataforma, con beneficios unicos para ellos</p>
-                        <a href="#">Mas informacion...</a>
+                        <button id="memb2">Comprar Membresi</button>
                 </div>
                 <div>
                     <span>Plan lector
                         Desu
                         </span>
                         <p>plan para generadores de contenido en la plataforma, con beneficios unicos para ellos</p>
-                        <a href="#">Mas informacion...</a>
+                        <button id="memb3">Comprar Membresi</button>
                 </div>
             </div>
             <!-- slider -->
@@ -341,5 +341,8 @@
     
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="./js/Membrecias.js"></script>
+<script src="./js/Tienda.js"></script>
+<script src="./js/index.js"></script>
 </body>
 </html>
