--- a/Descargas.html
+++ b/Descargas.html
@@ -73,7 +73,7 @@
                       <li class="nav-item">
                         <a class="nav-link" href="./Descargas.html">Descargas</a>
                       </li>
-                     <!--<li class="nav-item">
+                      <!--<li class="nav-item">
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                       </li>-->
                     </ul>
@@ -372,7 +372,7 @@
             <h2>Novedades</h2>
             <div class="divs_novedades">
               <div class="card" style="width: 18rem;">
-                <img src="./img/seguidores_2.jpg" class="card-img-top" alt="...">
+                <img src="./img/seguidores_2.jpg" class="card-img-top" alt="novedades_p">
                 <div class="card-body">
                   <h5 class="card-title">Llegamos a los 10k</h5>
                   <p class="card-text">Gracias a todos ustedes hemos llegado a los 10k de usuario en la plataforma y ahora contamos con 10 colaboradores, se vendran cosas mejores.</p>
@@ -381,7 +381,7 @@
               </div>
 
               <div class="card" style="width: 18rem;">
-                <img src="./img/img_novedad.jpg" class="card-img-top" alt="...">
+                <img src="./img/img_novedad.jpg" class="card-img-top" alt="novedades_p">
                 <div class="card-body">
                   <h5 class="card-title">Mejoras en las transmisiones</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -390,7 +390,7 @@
               </div>
 
               <div class="card" style="width: 18rem;">
-                <img src="./img/novedad_3.jpeg" class="card-img-top" alt="...">
+                <img src="./img/novedad_3.jpeg" class="card-img-top" alt="novedades_p">
                 <div class="card-body">
                   <h5 class="card-title">Sorteo de kit</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
