--- a/Tienda.html
+++ b/Tienda.html
@@ -213,7 +213,7 @@
                                     d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"
                                   />
                                 </svg>
-                                articulo 1
+                                Figuras
                               </li>
                               <li>
                                 <svg
@@ -226,7 +226,7 @@
                                     d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"
                                   />
                                 </svg>
-                                articulo 2
+                                Electronica
                               </li>
                               <li>
                                 <svg
@@ -239,7 +239,7 @@
                                     d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"
                                   />
                                 </svg>
-                                articulo 3
+                                Articulos de belleza
                               </li>
                               <li>
                                 <svg
@@ -252,7 +252,7 @@
                                     d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"
                                   />
                                 </svg>
-                                articulo 4
+                                Productos SocialDesu
                               </li>
                               <li>
                                 <svg
@@ -265,7 +265,7 @@
                                     d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"
                                   />
                                 </svg>
-                                articulo 5
+                                Mangas
                               </li>
                               <li>
                                 <svg
@@ -278,7 +278,7 @@
                                     d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"
                                   />
                                 </svg>
-                                articulo 6
+                                Articulos de colección
                               </li>
                               <li>
                                 <svg
@@ -291,7 +291,7 @@
                                     d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"
                                   />
                                 </svg>
-                                articulo 7
+                                Boletos de sorteos
                               </li>
                               <li>
                                 <svg
@@ -304,7 +304,7 @@
                                     d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"
                                   />
                                 </svg>
-                                articulo 8
+                                Blurrays
                               </li>
                             </ul>
                           </div>
@@ -342,9 +342,12 @@
                                 </div>
                                 <div class="mb-3 form-check">
                                   <input
-                                    type="checkbox"
+                                    type="radio"
                                     class="form-check-input"
                                     id="exampleCheck1"
+                                    value="500-900"
+                                    onclick="fltros('500-900')"
+                                    name="filtro1"
                                   />
                                   <label class="form-check-label" for="exampleCheck1"
                                     >500 a 900</label
@@ -352,9 +355,12 @@
                                 </div>
                                 <div class="mb-3 form-check">
                                   <input
-                                    type="checkbox"
+                                    type="radio"
                                     class="form-check-input"
                                     id="exampleCheck1"
+                                    value="1000-3000"
+                                    onclick="fltros('1000-3000')"
+                                    name="filtro1"
                                   />
                                   <label class="form-check-label" for="exampleCheck1"
                                     >1000 a 3000</label
@@ -362,9 +368,12 @@
                                 </div>
                                 <div class="mb-3 form-check">
                                   <input
-                                    type="checkbox"
+                                    type="radio"
                                     class="form-check-input"
                                     id="exampleCheck1"
+                                    value="5000-10000"
+                                    onclick="fltros('5000-10000')"
+                                    name="filtro1"
                                   />
                                   <label class="form-check-label" for="exampleCheck1"
                                     >5000 a 10000</label
@@ -372,12 +381,42 @@
                                 </div>
                                 <div class="mb-3 form-check">
                                   <input
-                                    type="checkbox"
+                                    type="radio"
                                     class="form-check-input"
                                     id="exampleCheck1"
+                                    value="10000"
+                                    onclick="fltros('10000')"
+                                    name="filtro1"
+                                    
                                   />
                                   <label class="form-check-label" for="exampleCheck1"
                                     >10000 mas ></label
+                                  >
+                                </div>
+                                <div class="mb-3 form-check">
+                                  <input
+                                    type="radio"
+                                    class="form-check-input"
+                                    id="exampleCheck1"
+                                    value="menor-mayor"
+                                    onclick="fltros('menor-mayor')"
+                                    name="filtro1"
+                                  />
+                                  <label class="form-check-label" for="exampleCheck1"
+                                    >Menor a Mayor></label
+                                  >
+                                </div>
+                                <div class="mb-3 form-check">
+                                  <input
+                                    type="radio"
+                                    class="form-check-input"
+                                    id="exampleCheck1"
+                                    value="mayor-menor"
+                                    onclick="fltros('mayor-menor')"
+                                    name="filtro1"
+                                  />
+                                  <label class="form-check-label" for="exampleCheck1"
+                                    >Mayor a Menor></label
                                   >
                                 </div>
                               </form>
@@ -549,7 +588,7 @@
                       d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"
                     />
                   </svg>
-                  articulo 1
+                  Figuras
                 </li>
                 <li>
                   <svg
@@ -562,7 +601,7 @@
                       d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"
                     />
                   </svg>
-                  articulo 2
+                  Electronica
                 </li>
                 <li>
                   <svg
@@ -575,7 +614,7 @@
                       d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"
                     />
                   </svg>
-                  articulo 3
+                  Articulos de belleza
                 </li>
                 <li>
                   <svg
@@ -588,7 +627,7 @@
                       d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"
                     />
                   </svg>
-                  articulo 4
+                  Productos SocialDesu
                 </li>
                 <li>
                   <svg
@@ -601,7 +640,7 @@
                       d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"
                     />
                   </svg>
-                  articulo 5
+                  Mangas
                 </li>
                 <li>
                   <svg
@@ -614,7 +653,7 @@
                       d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"
                     />
                   </svg>
-                  articulo 6
+                  Articulos de colección
                 </li>
                 <li>
                   <svg
@@ -627,7 +666,7 @@
                       d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"
                     />
                   </svg>
-                  articulo 7
+                  Boletos de sorteos
                 </li>
                 <li>
                   <svg
@@ -640,7 +679,7 @@
                       d="M8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"
                     />
                   </svg>
-                  articulo 8
+                  Blurrays
                 </li>
               </ul>
             </div>
@@ -678,9 +717,12 @@
                   </div>
                   <div class="mb-3 form-check">
                     <input
-                      type="checkbox"
+                      type="radio"
                       class="form-check-input"
                       id="exampleCheck1"
+                      value="500-900"
+                      onclick="fltros('500-900')"
+                      name="filtro1"
                     />
                     <label class="form-check-label" for="exampleCheck1"
                       >500 a 900</label
@@ -688,9 +730,12 @@
                   </div>
                   <div class="mb-3 form-check">
                     <input
-                      type="checkbox"
+                      type="radio"
                       class="form-check-input"
                       id="exampleCheck1"
+                      value="1000-3000"
+                      onclick="fltros('1000-3000')"
+                      name="filtro1"
                     />
                     <label class="form-check-label" for="exampleCheck1"
                       >1000 a 3000</label
@@ -698,9 +743,12 @@
                   </div>
                   <div class="mb-3 form-check">
                     <input
-                      type="checkbox"
+                      type="radio"
                       class="form-check-input"
                       id="exampleCheck1"
+                      value="5000-10000"
+                      onclick="fltros('5000-10000')"
+                      name="filtro1"
                     />
                     <label class="form-check-label" for="exampleCheck1"
                       >5000 a 10000</label
@@ -708,12 +756,42 @@
                   </div>
                   <div class="mb-3 form-check">
                     <input
-                      type="checkbox"
+                      type="radio"
                       class="form-check-input"
                       id="exampleCheck1"
+                      value="10000"
+                      onclick="fltros('10000')"
+                      name="filtro1"
+                      
                     />
                     <label class="form-check-label" for="exampleCheck1"
                       >10000 mas ></label
+                    >
+                  </div>
+                  <div class="mb-3 form-check">
+                    <input
+                      type="radio"
+                      class="form-check-input"
+                      id="exampleCheck1"
+                      value="menor-mayor"
+                      onclick="fltros('menor-mayor')"
+                      name="filtro1"
+                    />
+                    <label class="form-check-label" for="exampleCheck1"
+                      >Menor a Mayor></label
+                    >
+                  </div>
+                  <div class="mb-3 form-check">
+                    <input
+                      type="radio"
+                      class="form-check-input"
+                      id="exampleCheck1"
+                      value="mayor-menor"
+                      onclick="fltros('mayor-menor')"
+                      name="filtro1"
+                    />
+                    <label class="form-check-label" for="exampleCheck1"
+                      >Mayor a Menor></label
                     >
                   </div>
                 </form>
