--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
                         <li><a href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                                 <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-                              </svg>
+                            </svg>
                         </a></li>
                         <li><a href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
                                 <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
-                              </svg>
+                            </svg>
                         </a></li>
                         <li><a href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
                                 <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
-                              </svg>
+                            </svg>
                         </a></li>
                     </ul>
             </div>
@@ -52,34 +52,34 @@
 
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html"> <img src="./img/logoDesu1.png" alt="logo" class="logo_img"> </a>  <!--Navbar-->
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="index.html"> <img src="./img/logoDesu1.png" alt="logo" class="logo_img"> </a>  <!--Navbar-->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                  <li class="nav-item">
+                    <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="./Registrar.html">Registrate</a>
-                  </li>
-                  <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                     <a class="nav-link" href="./IniciarSesion.html">Iniciar sesion</a>
-                  </li>
-                  <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                     <a class="nav-link" href="./Tienda.html">Tienda Desu</a>
-                  </li>
-                  <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                     <a class="nav-link" href="#nosotros">Quienes somos</a>
-                  </li>
-                  <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                     <a class="nav-link" href="./Descargas.html">Descargas</a>
-                  </li>
-                 <!--<li class="nav-item">
+                </li>
+                <!--<li class="nav-item">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                  </li>-->
+                </li>-->
                 </ul>
-              </div>
             </div>
-          </nav>
+            </div>
+        </nav>
 
         <!--fin del menu de moviles-->
     </header>
@@ -130,42 +130,42 @@
             <!-- slider -->
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="./img/Miniatura clickbait curiosidad YouTube.png" class="d-block w-100 h-100" alt="...">
+                    <div class="carousel-item active">
+                    <img src="./img/Miniatura clickbait curiosidad YouTube.png" class="d-block w-100 h-100" alt="miniatura">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Plan Streemer</h5>
-                      <p>Puedes comprarlo en el apartado de la tienda Desu.</p>
+                        <h5>Plan Streemer</h5>
+                        <p>Puedes comprarlo en el apartado de la tienda Desu.</p>
                     </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./img/2.png" class="d-block w-100 h-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="./img/2.png" class="d-block w-100 h-100" alt="miniatura">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Plan Fan</h5>
-                      <p>Puedes comprarlo en el apartado de la tienda Desu.</p>
+                        <h5>Plan Fan</h5>
+                        <p>Puedes comprarlo en el apartado de la tienda Desu.</p>
                     </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./img/1.png" class="d-block w-100 h-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="./img/1.png" class="d-block w-100 h-100" alt="miniatura">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Plan Lector</h5>
-                      <p>Puedes comprarlo en el apartado de la tienda Desu.</p>
+                        <h5>Plan Lector</h5>
+                        <p>Puedes comprarlo en el apartado de la tienda Desu.</p>
                     </div>
-                  </div>
+                    </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
                 </button>
                 <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
                 </button>
-              </div>
+                </div>
             <!--fin slider-->
         </section>
 
